0.8.2 unreleased

    - Fixing prototypes of recently added functions.
    - Introducing Chemistry::OpenSMILES::is_double_bond().

0.8.1 2022-05-11

    - Fixing a bug with incomplete cis/trans markers on ring bonds.
    - Introducing Chemistry::OpenSMILES::toggle_cistrans().
    - Introducing two functions for bond type determination.

0.8.0 2022-05-05

    - Implementing support for tetrahedral chiral centers having lone
      pairs.
    - Safeguarding against infinite cycles in
      Chemistry::OpenSMILES::Writer::_permutation_order().
    - Fixing mistake in Chemistry::OpenSMILES::Parser::parse()
      documentation.

0.7.0 2021-10-30

    - Fixing important issue with representing tetrahedral chiral centers
      by introducing 'chirality_neighbours' key to atom hashes.

0.6.0 2021-10-18

    - Allowing multi-digit hydrogen counts if enabled via parser option.
    - Standardizing chiral markers for allenal carbons.
    - Not standardizing chiral markers in raw output.
    - Reporting '@' and '@@' chiralities with other than 4 neighbours as
      they cannot be processed right now.

0.5.2 2021-10-11

    - Creating explicitly refvertexed Graph objects to get around all the
      problems caused by interpreting them as scalar values.

0.5.1 2021-08-29

    - Working around an incompatibility with Graph v0.9721.

0.5.0 2021-08-26

    - Handling raw parsing output in
      Chemistry::OpenSMILES::clean_chiral_centers().
    - Fixing a bug in position counting due to $1 pollution.
    - Detecting and reporting disconnected parts of moieties.
    - Introducing Chemistry::OpenSMILES::is_chiral() to detect both chiral
      atoms and moieties.
    - Fixing bug in Chemistry::OpenSMILES::clean_chiral_centers() which
      caused removal of all chiral centers, not just tetrahedral.
    - Introducing Chemistry::OpenSMILES::mirror() to invert chiral centers,
      currently only tetrahedral.
    - Fixing bug in printing of chiral centers, previously only tetrahedral